# myfitnesspal-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/myfitnesspal_mcp/: auth.py  cli.py  config.py  diary.py  mfp_client.py  refresh.py  server.py  store.py  sync.py
tests/: conftest.py  test_auth.py  test_diary.py  test_mfp_client.py  test_server.py  test_store.py  test_sync.py
tests/fixtures/: diary.html  search.html
