[project]
name = "mfp-mcp"
version = "0.1.1"
description = "MCP server for MyFitnessPal: log, search, and analyze your food diary from any MCP client"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mason Levy" }]
keywords = ["mcp", "myfitnesspal", "nutrition", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.10,<2",
    "myfitnesspal==2.1.2",
    "curl-cffi>=0.15,<0.16",
    "lxml>=5,<6",
    "platformdirs>=4",
]

[project.optional-dependencies]
autorefresh = ["playwright>=1.40"]

[project.urls]
Repository = "https://github.com/Mason-Levyy/myfitnesspal-mcp"

[project.scripts]
mfp-mcp = "myfitnesspal_mcp.cli:main"
myfitnesspal-mcp = "myfitnesspal_mcp.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myfitnesspal_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
